--- a/style.css
+++ b/style.css
@@ -1,3 +1,98 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --light-blue: #3ca2d4;
+    --dark-blue: #215d7b;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 2%;
+    background-color: var(--light-blue)
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding: 1%;
+    background-color: white;
+    color: black;
+}
+
+#welcomeMessage {
+    display: block;
+    margin: 60px auto;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--dark-blue);
+    padding: 2%;
+    border-radius: 15px;
+}
+
+#startButton {
+    background-color: #61ea6a;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border: none;
+    color: black;
+    margin-top: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 15px;
+}
+
+.questionContainer {
+    display: block;
+    margin: 60px auto;
+    text-align: center;
+    font-size:20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--dark-blue);
+    padding: 2%;
+    border-radius: 15px;
+}
+
+#answerContainer {
+    background-color: var(--light-blue);
+    color: black;
+    margin: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 16px;
+}
+
+.button {
+    background-color: white;
+    color: black;
+    border: 1px black;
+    margin: 2%;
+    padding: 2%;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    font-size: 16px;
+    border-radius: 15px;
+}
+
 .hide {
-    display:none
+    display: none;
 }
