--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     --dark-blue: #215d7b;
 }
 
+button:hover {
+    cursor: pointer;
+  }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 2%;
@@ -25,7 +29,6 @@ header {
 }
 
 #welcomeMessage {
-    display: block;
     margin: 60px auto;
     text-align: center;
     font-size: 36px;
@@ -54,7 +57,6 @@ header {
 }
 
 .questionContainer {
-    display: block;
     margin: 60px auto;
     text-align: center;
     font-size:20px;
@@ -68,13 +70,15 @@ header {
 }
 
 #answerContainer {
-    background-color: var(--light-blue);
+    background-color: var(--dark-blue);
     color: black;
     margin: 2%;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     font-size: 16px;
 }
 
@@ -86,13 +90,47 @@ header {
     padding: 2%;
     text-align: center;
     text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
     font-size: 16px;
     border-radius: 15px;
 }
 
+#highScores {
+    margin: 60px auto;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--dark-blue);
+    padding: 2%;
+    border-radius: 15px;
+}
+
+#playAgainButton {
+    background-color: #61ea6a;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border: none;
+    color: black;
+    margin-top: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 15px;
+}
+
+.playAgainContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .hide {
     display: none;
+}
+
+.show {
+    display: block;
 }
