--- a/style.css
+++ b/style.css
@@ -78,11 +78,11 @@ header {
     text-decoration: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    align-items: center;
     font-size: 16px;
 }
 
-.button {
+.answerButton {
     background-color: white;
     color: black;
     border: 1px black;
@@ -91,6 +91,19 @@ header {
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+    border-radius: 15px;
+}
+
+#record-score {
+    margin: 60px auto;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--dark-blue);
+    padding: 2%;
     border-radius: 15px;
 }
 
@@ -105,6 +118,11 @@ header {
     background-color: var(--dark-blue);
     padding: 2%;
     border-radius: 15px;
+}
+
+ol {
+    list-style-type: none;
+    padding: 0;
 }
 
 #playAgainButton {
@@ -125,6 +143,45 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+#clearButton {
+    background-color: #fbeb0f;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border: none;
+    color: black;
+    margin-top: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 15px;
+}
+
+#score-list {
+    background-color: white;
+    color: black;
+    padding: 2%;
+    margin: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#name-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+input {
+    height: 30px;
+    width: 50%;
+    padding: 2%;
+    margin: 2%;
+    font-size: 24px;
+    border: 1px solid #001b44;
 }
 
 .hide {
