--- a/style.css
+++ b/style.css
@@ -120,12 +120,26 @@ header {
     border-radius: 15px;
 }
 
-ol {
+ul {
     list-style-type: none;
     padding: 0;
 }
 
 #playAgainButton {
+    background-color: #e9981f;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border: none;
+    color: black;
+    margin-top: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 15px;
+}
+
+#submitButton {
     background-color: #61ea6a;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border: none;
@@ -138,6 +152,7 @@ ol {
     font-size: 16px;
     border-radius: 15px;
 }
+
 
 .playAgainContainer {
     display: flex;
